k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "jwt-istio-spike"
  namespace: main
  labels:
    app: jwt-istio-spike
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwt-istio-spike
  progressDeadlineSeconds: 120
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: jwt-istio-spike
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: "docker/default"
    spec:
      securityContext:
        runAsNonRoot: false
        fsGroup: 65534
      containers:
        - name: app
          image: "dgkanatsios/simpleapp"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.1"
              memory: "300Mi"
            limits:
              cpu: "0.2"
              memory: "600Mi"
          securityContext:
            runAsUser: 20000
            runAsGroup: 20000
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: jwt-istio-spike
  namespace: main
  labels:
    app: jwt-istio-spike
    service: jwt-istio-spike
spec:
  selector:
    app: jwt-istio-spike
  ports:
    - port: 8080
      targetPort: 8080
      name: http
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jwt-istio-spike
  namespace: main
spec:
  hosts:
  - "*"
  gateways:
  - private
  - public
  http:
  - match:
    - uri:
        prefix: "/jwt-istio-spike"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: jwt-istio-spike
        port:
          number: 8080
---
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: jwt-istio-spike
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "shippit.com"
    jwks: |
      { "keys": [{"kty":"RSA","n":"qA1NwdNOHZ7g4rAv7b8gFUEyxG0SzwGJpPkIaJdPdNnNtC9bUl6rM_aVLNCdzhKUB2nVMD7nL9OfK8h9tGsHjQ0cDILRtsFnpxh39sW9ziTWeF7dhyIKm4w5_AAdCNYLLZMsxVrLFcHt6KJww8J9Opj6hzRHSH_BqgYXru5zvO457s09JCwzcp8JVOVN48kmbiQH0sOSmPRmcCEsBRIkUMGFbotGmrX3iay0bjsMf3F-b_qgl9VOc0aAVNKah71LhdNUiCwbebrtoATbmnBQoQX2TR7GpbfnmGTtKiS8NZUOLfS9jG0z9Q3FmSraTZaLN2ULSgRCbtqcAJjzbkj5Pw","e":"AQAB","kid":"86250c5210eb022f583fa76e958c1c3112f10da69f39d062192b5dddeed16102"}] }

---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: jwt-istio-spike
  namespace: istio-system
spec:
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/jwt-istio-spike"]
